--- a/src/components/jobtitle/style.css
+++ b/src/components/jobtitle/style.css
@@ -6,8 +6,6 @@
     flex-flow: wrap;
     justify-content: flex-start;
     align-items: flex-start;
-    background-color: bisque;
-
 
 }
 
